admin/webUI/assets/css/custom.css
/*MDL DESIGN REWRITE*/
.mdl-layout__content {
  padding-bottom: 100px;
}
.mdl-layout-title {
  color: #EC3D2E;
}
.mdl-layout__header-row .mdl-navigation__link {
  cursor: pointer;
  min-width: 50px;
  padding: 0 10px;
  color: black;
}
.mdl-layout__header-row .mdl-navigation__link:hover,
.dropdown-wrapper:hover .mdl-navigation__link {
  box-shadow: inset 0 -3px 0 0 #EC3D2E;
  color: #EC3D2E;
}
.mdl-layout-title {
  font-weight: bold;
}
.mdl-layout__container .mdl-layout__header {
  background: white;
  position: relative;
}
.mdl-layout__header .mdl-layout__drawer-button {
  color: black;
}
.mdl-layout__header .mdl-layout__drawer-button i {
  margin-top: -10px;
}
.mdl-list__item-primary-content {
  color: black;
}
.mdl-grid.no-pad {
  padding: 0;
}
.mdl-grid.no-margin-lr .mdl-cell {
  margin: 10px 0;
}
.ng-cloak {
  display: none;
}
button.btn-lg {
    min-width: 201px;
}
/*.mdl-grid.no-pad .mdl-cell {
  margin: 0;
  width: 100%;
}*/

.mdl-layout__drawer .mdl-navigation .mdl-navigation__link:hover {
  background-color: #EC3D2E;
  color: white;
}
.mdl-button.btn-red {
  background: red;
}
.mdl-button.action-btn {
  min-width: 100px;
  margin-right: 15px;
  color: white;
}
.mdl-button:focus:not(:active) {
  background-color: #E91E63;
}

.mdl-button:hover, .action-btn:hover {
  background-color: rgba(255, 101, 69, 1.00);
  color: white;
}
.mdl-grid.standard-size {
  width: 90%;
}

.mdl-radio__inner-circle {
  background: #EC3D2E;
}

.mdl-checkbox.is-checked .mdl-checkbox__tick-outline {
  background: rgb(236, 61, 46)url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgi…sZT0iZmlsbDojZmZmZmZmO2ZpbGwtb3BhY2l0eToxO3N0cm9rZTpub25lIiAvPgo8L3N2Zz4K");
}
.mdl-checkbox.is-checked .mdl-checkbox__box-outline {
  border: 2px solid RGB(236, 61, 46);
}

.mdl-card {
  width: 100%;
}
.mdl-card__title {
  height: 140px;
  color: #EC3D2E;
}
.mdl-textfield {
  width: 100%;
}
.mdl-textfield__input:focus {
  outline: 0;
}
.mdl-tabs__tab-bar {
  justify-content: flex-start;
}
.material-icons {
  vertical-align: middle;
}
.mdl-button {
  height: 48px;
  background: #ff0000;
  color: white;
}
.mdl-button.btn {
  margin-top: 20px;
}
.mdl-button:hover {
  background-color: #E91E63;
}

.mdl-button .material-icons {
  vertical-align: sub;
  font-size: 20px;
}
.mdl-chip.danger-chip:hover {
  background: #F44336;
}
.mdl-chip.danger-chip {
  background: #FF5722;
  color: white;
}
.mdl-chip.white-chip {
    background: white;
    border: 1px solid #F44336;
}
.slide-link.is-active .mdl-chip {
  background: white;
  color: black;
}
.mdl-checkbox {
  height: inherit;
}

.mdl-success.is-checked .mdl-checkbox__tick-outline {
    background: green;
}
.mdl-success.is-checked .mdl-checkbox__box-outline {
    border: 2px solid green;
}
.mdl-success.is-checked .mdl-checkbox__label {
    color: green;
}
.mdl-button[disabled][disabled], .mdl-button.mdl-button--disabled.mdl-button--disabled {
  border: 1px solid #9E9E9E;
}
.mdl-cell.no-margin-lr {
  margin-left: 0;
  margin-right: 0;
}
/*HOME PAGE*/

body.home {
  background: url("../img/home-cover.jpg") no-repeat;
  background-size: cover;
}

.mdl-card__actions .mdl-button {
  width: 49%;
  background: #607D8B;
}

.mdl-card__actions .mdl-button:hover {
  background: #FF5722;
}

.home-grid {
  padding: 100px 0 50px;
}

.panel-card {
  margin-left: 30px;
}
/*CANDIDATE*/
.candidate .question {
  background: rgba(212, 213, 213, 0.26);
  padding: 22px 10px;
  border-radius: 5px;
}

/*QUESTION PAGE CSS*/

.question-cover.mdl-card__title {
  background: url("../img/question-cover.png");
  background-size: 100% 100%;
}

.typesearch {
  position: relative;
}

.typesearch-container {
  position: absolute;
  width: 100%;
  background: white;
  z-index: 1;
}

.tag-item {
  padding: 9px 10px;
  border-bottom: 1px solid #e0e0e0;
  cursor: pointer;
}

.tag-item:hover {
  background: #EC3D2E;
  color: white;
}

.question-form .mdl-checkbox.is-checked .mdl-checkbox__label {
    color: #4CB973;
}

.select2-container {
  width: 100% !Important;
}

.mdl-select.select2-container {
  padding-top: 20px;
}

.mdl-select.select2-container .select2-choices {
  border: none;
  border-bottom: 1px solid rgba(0,0,0,.12);
  background-image: none;
}

.mdl-select.select2-container .select2-choices .select2-search-field input{
  font-size: 16px;
  font-family: 'Montserrat', sans-serif;
  color: rgba(0,0,0,.26);
}
.mdl-select.select2-container .select2-choices .select2-search-choice{
  line-height: 20px;
}
.mdl-select.select2-container .select2-search-choice-close {
  left: 3px;
  top: 53%;
  transform: translateY(-50%);
}
.mdl-select.select2-container.select2-container-active .select2-choices,
.mdl-select .select2-drop-active {
  border: 1px solid #EC3D2E;
}
.mdl-select .select2-drop-active {
  border-top: none;
}
.mdl-select .select2-results .select2-highlighted {
  background: #EC3D2E;
}

.ui-select-multiple input.ui-select-search:not(.ng-touched) {
  width: 100% !important;
  position: absolute;
}
.question-action {
  min-width: 100px;
  line-height: 48px;
}

/*QUIZ PAGE CSS*/
.duration-inputs .mdl-textfield {
  width: 32%;
}
.quiz-cover.mdl-card__title {
  background: url("../img/quiz-cover.png");
  background-size: 100% 100%;
}
.alert {
  padding: 10px 10px;
  margin-bottom: 10px;
  color: white;
}
.alert-info {
  background: #019CFC;
}

.alert-success {
  background: #009688;
}

.mdl-button--fab {
  font-size: 14px;
  color: white;
}
.mdl-button--fab.mdl-button--small-fab {
    height: 34px;
    min-width: 34px;
    width: 34px;
}

.quiz-questions.mdl-chip {
  height: inherit;
}

.quiz-questions.mdl-chip .mdl-chip__text{
  white-space: normal;
}

.clickable-hover:hover {
  background: rgba(213, 214, 214, 0.42);
  cursor: pointer;
}

.option-icon i {
  margin-top: -5px;
}

/* CODEMIRROR*/
#question-panel .CodeMirror {
  border-bottom: 1px solid black;
  min-height: 380px;
}

.options-panel .CodeMirror {
  min-height: 57px;
  height: auto;
  border: 1px solid gray;
}

#preview-panel {
  min-height: 380px;
  border-left: 30px solid #DDDDDD;
  padding-left: 10px;
  padding-top: 10px;
}

/*QUIZ TAKING */

.mdl-chip__contact {
  width: inherit;
  padding: 0 15px;
  font-size: 15px;
}

.timer-chip-text {
    width: 84px;
}

.mdl-chip--contact .mdl-chip__text {
  min-width: 40px;
  font-size: 16px;
}

.quiz-ended {
  position: fixed;
  width: 66%;
  top: 50%;
  transform: translateY(-50%);
}
.quiz-ended .pull-right {
  float: none;
}
.quiz-ended .mdl-chip__contact {
  font-size: 20px;
}

.candidate .options pre {
  display: block;
  padding-left: 10px !important;
}

.candidate .options label {
  width: 100%;
}

/*INVITE PAGE*/

.select2-container .select2-choice {
  padding: 8px;
  background-image: none;
}
.select2-dropdown-open .select2-choice {
  background: white;
}

.select2-container .select2-choice .select2-arrow{
  background: white;
  background-image: none;
}
.select2-container .select2-choice .select2-arrow b {
  background-position: 0 10px;
}
.select2-dropdown-open .select2-choice .select2-arrow b {
  background-position: -18px 10px;
}

/*CANDIDATE REPORT*/
.report-header {
  background: #e0e0e0;
}

.mdl-chip-info .mdl-chip__text {
  width: 140px;
}

.cmdl-chip-value {
  min-width: 240px;
  height: 32px;
  line-height: 32px;
  vertical-align: middle;
  padding: 0 20px;
  border: 1px solid #DEDEDE;
  border-radius: 16px;
  margin-left: -38px;
  background: white;
  margin-top: 8px;
}

.path {
  stroke-dasharray: 188;
  stroke-dashoffset: 0;
  stroke: rgba(128, 128, 128, 0.56);
  transform-origin: center;
}

circle.path.prograss-circle {
  display: none;
  stroke: #009688;
  stroke-dashoffset: 184;
  transition: 2s;
}
    
/*TABLET + MOBILE SPECIFIC CSS*/
@media (max-width: 840px) {

}

/*MOBILE SPECIFIC CSS*/
@media (max-width: 480px) {
}

